# sizzy

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  devharness-spec.md  pyproject.toml
runtime/: README.md  pyproject.toml
runtime/devharness/: __main__.py  boot.py  call_class.py  cost_mode.py  cost_router.py  health.py  migrate.py  models.py  sdk_query.py  textsim.py
runtime/devharness/aci/: editor.py  habit_scripts.py  host_exec.py  server.py  shell.py  test_runner.py
runtime/devharness/adversarial/: __init__.py  probes.py  runner.py  scheduler.py
runtime/devharness/advisory/: __init__.py  __main__.py  llm.py  prompts.py
runtime/devharness/artifacts/: explore.py  plan.py  registry.py  spec.py
runtime/devharness/calibration/: brier.py  evaluation.py  promotion.py  thresholds.py
runtime/devharness/checkpoint/: base.py  rewind.py
runtime/devharness/cli/: _bus.py  answer.py  backfill.py  init.py  memory.py  prune.py  questions.py  ratify.py  retro.py  sign.py  sweep.py  work_items.py
runtime/devharness/console/: __init__.py  __main__.py  app.py  assemble.py  developer.py  director.py  enact_gate_change.py  oss.py  progress.py  prune.py  research.py  retro.py  review.py  signoff.py  sse.py  state.py  task_decision.py  tui.py
runtime/devharness/events/: bus.py  manifest.py  registry.py
runtime/devharness/explore/: __init__.py  runner.py  scope_derivation.py
runtime/devharness/explore/parsers/: __init__.py  cargo.py  gemfile.py  go_mod.py  package_json.py  pyproject.py  requirements.py
runtime/devharness/faultinjection/: __init__.py  hermetic.py  probes.py  runner.py  scheduler.py
runtime/devharness/gates/: antibody_screen.py  base.py  blast_radius.py  destructive.py  non_goals_guard.py  registry.py  sandbox.py  scope.py  scope_guard.py  secret_guard.py  spec_signed.py  verifier_attached.py  workflow_guard.py  write_lock.py
runtime/devharness/lock/: base.py
runtime/devharness/maintenance/: __init__.py  base.py  fermata.py  prune.py  scheduler.py
runtime/devharness/mcp/: base.py  config.py  mcp_reasoning.py  parallax.py
runtime/devharness/memory/: __init__.py  base.py  export_import.py  store.py
runtime/devharness/monitor/: __init__.py  checks.py  sweep.py
runtime/devharness/oss/: __init__.py  caps.py  commit_identity.py  cooldowns.py  injection_scan.py  intake.py  license_allowlist.py  maintainer.py  publish.py  revocation.py  scope_oss.py
runtime/devharness/panel/: __init__.py  __main__.py  routes.py  server.py  session.py  state.py  worker.py  writer.py
runtime/devharness/panel/static/: index.html
runtime/devharness/projections/: handlers.py  parity.py  registry.py
runtime/devharness/retro/: __init__.py  antibody_library.py  approval.py  base.py  candidate_guard.py  drive.py  enacted_gate_changes.py  engine.py  gate_change_validator.py  llm_client.py  llm_residue.py  scheduler.py  signal_scheduler.py  t0_matcher.py
runtime/devharness/roles/: base.py  developer.py  director.py  discovery.py  fresh_context.py  integration.py  iteration_router.py  promote.py  research.py  reviewer.py  scope_resolver.py  synthesis.py
runtime/devharness/sandbox/: __init__.py  base.py  confine.py  mock.py  registry.py  seccomp.py  vps.py  wsl.py
runtime/devharness/task_classes/: base.py  builtin.py  gate_binding.py  ratify.py  registry.py
runtime/devharness/task_lifecycle/: auto_rewind.py  base.py  done_is_earned.py
runtime/devharness/verifier/: base.py  class_commands.py  registry.py  runner.py
runtime/devharness/verifier/builtin/: __init__.py  (+11 more)
runtime/devharness/worktree/: contamination.py  hygiene.py  isolate.py
sidecar/: Cargo.toml  README.md
sidecar/src/: event_catalog.generated.rs  lib.rs  main.rs
sidecar/tests/: sidecar.rs
(+508 files in other folders)
